apps/piwigo/piwigo.yaml
apiVersion: v1
kind: Service
metadata:
  name: piwigo
  namespace: piwigo
spec:
  ports:
    - port: 80
      name: http
  selector:
    app: piwigo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: piwigo
  namespace: piwigo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: piwigo
  template:
    metadata:
      labels:
        app: piwigo
    spec:
      containers:
        - name: piwigo
          image: lscr.io/linuxserver/piwigo:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: piwigo-data
              mountPath: /config
      volumes:
        - name: piwigo-data
          persistentVolumeClaim:
            claimName: piwigo-data
